--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -354,7 +354,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Rahul Bhandari</h3>
-                    <p>Faculty, CU</p>
+                    <p>Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -365,7 +365,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Neetu Rani</h3>
-                    <p>Faculty, CU</p>
+                    <p>Associate Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -376,7 +376,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Sneh Sheoran</h3>
-                    <p>Faculty, CU</p>
+                    <p>Associate Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -395,7 +395,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Inderjeet Singh</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -408,7 +408,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Tanu Dhiman</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -421,7 +421,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Neha Dutta</h3>
-                    <p>Faculty, CU</p>
+                    <p>Associate Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -434,7 +434,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Charnpreet Kaur</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -447,7 +447,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Gurleen Kaur</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -460,7 +460,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Deepika Sood</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -473,7 +473,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Deepshikha</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -486,7 +486,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Kushwant Kaur</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -499,7 +499,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Prashant</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -512,7 +512,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Bhupinder Singh</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -525,7 +525,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Jyoti Rani</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -538,7 +538,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Meenakshi Rana</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -551,7 +551,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Kuldeep Kumar</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -564,7 +564,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Kussum</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -577,7 +577,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Er. Shammy Samita</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -590,7 +590,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Manju Lata</h3>
-                    <p>Faculty, CU</p>
+                    <p>Assistant Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -603,7 +603,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Sanjay Singla</h3>
-                    <p>Faculty, CU</p>
+                    <p>Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -616,7 +616,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Raman Chadha</h3>
-                    <p>Faculty, CU</p>
+                    <p>Professor, Department of Computer science & engineering, CU</p>
                   </div>
                 </div>
               </div>
@@ -628,7 +628,7 @@
                   </div>
                   <div class="ci_content">
                     <h3>Dr. Sushil Garg</h3>
-                    <p>Faculty, CU</p>
+                    <p>Professor, Department of Computer science & engineering, CU</p>
                   </div>
                   </div>
                   </div>
@@ -641,7 +641,7 @@
         </div>
         <div class="ci_content">
           <h3>Dr. M. Abdul Wassay</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -654,7 +654,7 @@
         </div>
         <div class="ci_content">
           <h3>Dr. Praveen Kumar</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -667,7 +667,7 @@
         </div>
         <div class="ci_content">
           <h3>Dr. Atul Kumar</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -687,7 +687,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Santosh Kumar</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -700,7 +700,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Reshma Khan</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -726,7 +726,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Himanshi</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -739,7 +739,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Daulat Sihag</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -752,7 +752,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Narinder Yadav</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -765,7 +765,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Gagandeep Singh</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -778,7 +778,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Neelamni Samal</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -791,7 +791,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Aparna</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -804,7 +804,7 @@
         </div>
         <div class="ci_content">
           <h3>Er. Harsh Sharma</h3>
-          <p>Faculty, CU</p>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
@@ -813,11 +813,11 @@
     <div class="col-12 col-md-6 col-lg-4 comite_item">
       <div class="c_item_wrap">
         <div class="ci_img">
-          <img src="images/drive-download-20241010T064425Z-001/dr_praveen_kumar_mannepalli-150-180.jpeg" alt="#" />
+          <img src="images/WhatsApp Image 2024-10-15 at 14.35.11_ffd6cd78.jpg" alt="#" />
         </div>
         <div class="ci_content">
-          <h3>Er. Parveen Kumar</h3>
-          <p>Faculty, CU</p>
+          <h3>Ms. Disha Sharma</h3>
+          <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
     </div>
