--- a/main/call-for-paper.html
+++ b/main/call-for-paper.html
@@ -166,7 +166,7 @@
                 <br />
                 <p>
                   Submit your paper here -
-                  <a href="./404Page.html">Click Here</a>
+                  <a href="https://forms.gle/kBHs3xZRjtJB1MDA7">Click Here</a>
                 </p>
                 <!-- <div class="table-responsive">
                         <table class="table w-100">
@@ -197,7 +197,9 @@
             <div class="col-md-4 col-lg-3 ms-auto">
               <div class="submission_link">
                 <div class="link_btn">
-                  <a href="./404Page.html" class="button yellow_btn"
+                  <a
+                    href="https://forms.gle/kBHs3xZRjtJB1MDA7"
+                    class="button yellow_btn"
                     >Paper Submission</a
                   >
                 </div>
