--- a/main/index.html
+++ b/main/index.html
@@ -194,7 +194,9 @@
                     class="button yellow_btn"
                     >Registration</a
                   >
-                  <a href="./404Page.html" class="button red_btn"
+                  <a
+                    href="https://forms.gle/kBHs3xZRjtJB1MDA7"
+                    class="button red_btn"
                     >Paper Submission</a
                   >
                 </div>
