--- a/main/contact.html
+++ b/main/contact.html
@@ -166,8 +166,8 @@
                         >
                         <br />
                         E-mail:
-                        <a href="mailto: scmai2025@cumail.in"
-                          >scmai2025@cumail.in</a
+                        <a href="mailto: ad1.cse@cumail.in"
+                          >ad1.cse@cumail.in</a
                         >
                       </p>
                       <p style="color: #000000">
