--- a/main/organizing-commitee.html
+++ b/main/organizing-commitee.html
@@ -650,7 +650,7 @@
           <img src="images/drive-download-20241010T064425Z-001/PRASHANT AHLUWALIA-E5026.jpg" alt="#" />
         </div>
         <div class="ci_content">
-          <h3>Er. Prashant</h3>
+          <h3>Er. Prashant Ahluwalia</h3>
           <p>Assistant Professor, Department of Computer science & engineering, CU</p>
         </div>
       </div>
