contact us update

--- a/main/download.html
+++ b/main/download.html
@@ -169,7 +169,7 @@
             </div>
             <div class="col-12 col-md-4 download_item">
               <div class="item_inner text-center">
-                <a href="pdf/Single-Page-Flyer.pdf" target="_blank"
+                <a href="./images/SCMAI-Brochure.pdf" target="_blank"
                   ><i class="fa-regular fa-file-pdf"></i
                 ></a>
                 <h2 class="h4">SINGLE PAGE FLYER</h2>
