--- a/main/contact.html
+++ b/main/contact.html
@@ -184,7 +184,7 @@
                       </p>
 
                       <br /><br />
-                      <ul class="social_list">
+                      <!-- <ul class="social_list">
                         <li>
                           <a
                             href="https://www.facebook.com/CollegesJhanjeri"
@@ -205,14 +205,14 @@
                             ><i class="fab fa-instagram" aria-hidden="true"></i
                           ></a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </div>
                   </div>
                   <div class="col-md-6 col-12">
                     <ul class="icon_list pt50">
                       <li>
                         <a
-                          href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3703.194006543965!2d76.6045486691298!3d30.6804611117959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fe5b795735cfd%3A0xb287b4430b6720fb!2sChandigarh%20Group%20of%20Colleges%20Jhanjeri%20Mohali!5e0!3m2!1sen!2sin!4v1669473545251!5m2!1sen!2sin"
+                          href="https://maps.app.goo.gl/tboH17bgYbHXNZKm7"
                           target="_main"
                           ><i class="fa fa-map-marker" aria-hidden="true"></i>
                           <span
